--- a/index.html
+++ b/index.html
@@ -3141,6 +3141,7 @@ body.light .mots-doux-card { background: linear-gradient(135deg,rgba(200,24,94,0
 .activite-ia-meta { font-size: 10px; color: var(--muted); font-weight: 700; text-transform: uppercase; letter-spacing: 1px; }
 .activite-ia-add-btn { padding: 10px 16px; background: linear-gradient(135deg,#e879a0,#9b59b6); color: #fff; font-size: 13px; font-weight: 700; font-family: 'DM Sans',sans-serif; border: none; border-radius: 10px; cursor: pointer; }
 </style>
+<script>
     var profile = (typeof getProfile === 'function') ? getProfile() : null;
     var self    = profile || 'girl';
     var other   = (self === 'girl') ? 'boy' : 'girl';
