--- a/index.html
+++ b/index.html
@@ -680,7 +680,12 @@
 <!-- PHOTOS ELLE (masquée par défaut pour girl) -->
 <div class="section fade-in">
   <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;">
-    <span>Elle</span>
+    <div style="display:flex;align-items:center;gap:6px;">
+      <span id="elleSectionTitle">Elle</span>
+      <button id="elleTitleEditBtn" onclick="elleEditSectionTitle()" style="background:none;border:none;cursor:pointer;padding:2px 4px;color:var(--muted);display:none;align-items:center;opacity:0.6;" aria-label="Modifier le titre">
+        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+      </button>
+    </div>
     <button id="elleGearBtn" onclick="elleToggleSection()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;opacity:0.7;" aria-label="Voir/éditer la section Elle">
       <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
     </button>
@@ -700,7 +705,12 @@
 <!-- PHOTOS LUI (masquée par défaut pour boy) -->
 <div class="section fade-in">
   <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;">
-    <span>Lui</span>
+    <div style="display:flex;align-items:center;gap:6px;">
+      <span id="luiSectionTitle">Lui</span>
+      <button id="luiTitleEditBtn" onclick="luiEditSectionTitle()" style="background:none;border:none;cursor:pointer;padding:2px 4px;color:var(--muted);display:none;align-items:center;opacity:0.6;" aria-label="Modifier le titre">
+        <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+      </button>
+    </div>
     <button id="luiGearBtn" onclick="luiToggleSection()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;opacity:0.7;" aria-label="Voir/éditer la section Lui">
       <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
     </button>
@@ -760,7 +770,10 @@
   </div>
   <div class="postit-wrap" id="postitStack"></div>
   <div class="stack-hint">Tape ou swipe pour passer au suivant</div>
-  <div class="stack-ctr" id="stackCounter"></div>
+  <div class="stack-ctr" style="display:flex;align-items:center;gap:6px;justify-content:center;">
+    <span id="stackCounter"></span>
+    <span id="postitNewBadge" style="display:none;background:linear-gradient(135deg,#e879a0,#9b59b6);color:#fff;font-size:9px;font-weight:800;letter-spacing:0.5px;padding:2px 6px;border-radius:8px;text-transform:uppercase;">NEW</span>
+  </div>
 </div>
 
 <!-- SOUVENIRS -->
@@ -825,13 +838,80 @@
 
 <!-- LIVRES -->
 <div class="section fade-in" id="Books">
-  <div class="section-label">Idées livres</div>
-  <div class="slider">
-    <div class="album-card"><div class="album-image"><a href="https://booknode.com/la_saga_des_impossibles_tome_1_adam_03666756" target="_blank" rel="noopener noreferrer"><img src="https://jstiwtbgkbedtldqjdhp.supabase.co/storage/v1/object/public/images/image-6.jpg" onerror="this.onerror=null;this.src='assets/images/image-6.jpg'"></a><div class="album-banner">Adam</div></div><div class="album-desc">Une romance qui touche l'âme ✨</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a18261401/Emma-Green-Ce-qui-nous-rend-vivants" target="_blank" rel="noopener noreferrer"><img src="https://jstiwtbgkbedtldqjdhp.supabase.co/storage/v1/object/public/images/image-7.jpg" onerror="this.onerror=null;this.src='assets/images/image-7.jpg'"></a><div class="album-banner">Ce qui nous rend vivants</div></div><div class="album-desc">Quand l'amour révèle tout 💖</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a17088484/Captive-Tome-1-Captive-Sarah-Rivens" target="_blank" rel="noopener noreferrer"><img src="https://jstiwtbgkbedtldqjdhp.supabase.co/storage/v1/object/public/images/image-8.jpg" onerror="this.onerror=null;this.src='assets/images/image-8.jpg'"></a><div class="album-banner">Captive</div></div><div class="album-desc">Passion et suspense 🔥</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://booknode.com/avant_toi_0690393" target="_blank" rel="noopener noreferrer"><img src="https://jstiwtbgkbedtldqjdhp.supabase.co/storage/v1/object/public/images/image-9.jpg" onerror="this.onerror=null;this.src='assets/images/image-9.jpg'"></a><div class="album-banner">Avant toi</div></div><div class="album-desc">Un amour impossible 💔</div></div>
-    <div class="album-card"><div class="album-image"><a href="https://www.fnac.com/a7792857/Katarina-Bivald-La-Bibliotheque-des-coeurs-cabosses" target="_blank" rel="noopener noreferrer"><img src="https://jstiwtbgkbedtldqjdhp.supabase.co/storage/v1/object/public/images/image-10.jpg" onerror="this.onerror=null;this.src='assets/images/image-10.jpg'"></a><div class="album-banner">La bibliothèque des cœurs cabossés</div></div><div class="album-desc">Émotions à chaque page 📚</div></div>
+  <div class="section-label" style="display:flex;align-items:center;justify-content:space-between;">
+    <span>Notre bibliothèque</span>
+    <div style="display:flex;align-items:center;gap:6px;">
+      <span id="livresNewBadge" style="display:none;background:linear-gradient(135deg,#e879a0,#9b59b6);color:#fff;font-size:9px;font-weight:800;letter-spacing:0.5px;padding:2px 6px;border-radius:8px;text-transform:uppercase;">NEW</span>
+      <button onclick="livresOpenGestion()" style="background:none;border:none;cursor:pointer;padding:4px 6px;color:var(--muted);display:flex;align-items:center;gap:5px;opacity:0.75;font-size:11px;font-weight:700;font-family:'DM Sans',sans-serif;letter-spacing:0.3px;" aria-label="Voir tous les livres">
+        <svg width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"/></svg>
+        Tout voir
+      </button>
+    </div>
+  </div>
+  <!-- Slider dynamique — rempli par JS -->
+  <div class="slider" id="livresSlider" style="gap:12px;"></div>
+  <!-- Boutons bas côte à côte -->
+  <div style="display:flex;gap:10px;padding:12px 0 4px;">
+    <button id="livreIdeaBtn" onclick="livresIdeeDuJour()" style="flex:1;display:flex;align-items:center;justify-content:center;gap:7px;padding:11px 10px;background:var(--s2);border:1px solid var(--border);border-radius:13px;color:var(--text);font-size:13px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
+      Idée du jour
+    </button>
+    <button onclick="livresOpenNew()" style="flex:1;display:flex;align-items:center;justify-content:center;gap:7px;padding:11px 10px;background:linear-gradient(135deg,rgba(232,121,160,0.15),rgba(155,89,182,0.15));border:1px solid rgba(232,121,160,0.3);border-radius:13px;color:var(--text);font-size:13px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">
+      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
+      Nouvelle pochette
+    </button>
+  </div>
+  <!-- Zone idée du jour Groq -->
+  <div id="livreIdeaCard" style="display:none;background:var(--s2);border:1px solid var(--border);border-radius:14px;padding:14px 16px;margin-top:4px;margin-bottom:2px;">
+    <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;text-transform:uppercase;margin-bottom:8px;">Idée du jour 📚</div>
+    <div id="livreIdeaText" style="font-size:14px;color:var(--text);line-height:1.5;">Chargement...</div>
+    <div id="livreIdeaMeta" style="font-size:10px;color:var(--muted);margin-top:6px;"></div>
+    <div style="display:flex;gap:8px;margin-top:12px;">
+      <button onclick="livresIdeeDuJour()" id="livreIdeaNextBtn" style="flex:1;padding:9px;background:var(--s3,rgba(255,255,255,0.06));border:1px solid var(--border);border-radius:10px;color:var(--text);font-size:12px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">Suivant →</button>
+      <button onclick="livresAddFromIdea()" style="flex:1;padding:9px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:10px;color:#fff;font-size:12px;font-weight:700;font-family:'DM Sans',sans-serif;cursor:pointer;">+ Ajouter</button>
+    </div>
+  </div>
+</div>
+
+<!-- MODAL GESTION LIVRES -->
+<div id="livresGestionOverlay" class="nous-modal-overlay" onclick="if(event.target===this)livresCloseGestion()">
+  <div class="nous-modal-sheet" style="max-height:88vh;overflow-y:auto;display:flex;flex-direction:column;" data-scrollable>
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
+      <div style="font-size:17px;font-weight:700;color:var(--text);">Notre bibliothèque</div>
+      <button onclick="livresCloseGestion()" style="background:none;border:none;cursor:pointer;font-size:20px;color:var(--muted);padding:4px;">✕</button>
+    </div>
+    <div id="livresGestionList" style="display:flex;flex-direction:column;gap:10px;"></div>
+    <button onclick="livresOpenNew()" style="margin-top:12px;width:100%;padding:13px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:12px;color:#fff;font-weight:700;font-size:14px;font-family:'DM Sans',sans-serif;cursor:pointer;flex-shrink:0;">+ Nouvelle pochette</button>
+  </div>
+</div>
+
+<!-- MODAL CRÉATION/ÉDITION LIVRE -->
+<div id="livreEditModal" class="nous-modal-overlay" onclick="if(event.target===this)livresCloseEdit()">
+  <div class="nous-modal-sheet" style="max-height:90vh;overflow-y:auto;display:flex;flex-direction:column;" data-scrollable>
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
+      <div id="livreEditModalTitle" style="font-size:17px;font-weight:700;color:var(--text);">Nouvelle pochette</div>
+      <button onclick="livresCloseEdit()" style="background:none;border:none;cursor:pointer;font-size:20px;color:var(--muted);padding:4px;">✕</button>
+    </div>
+    <!-- Photo -->
+    <div id="livreEditPhoto" onclick="livresPhotoClick()" style="width:100%;height:180px;background:var(--s2);border:2px dashed var(--border);border-radius:14px;display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;margin-bottom:14px;overflow:hidden;flex-shrink:0;background-size:cover;background-position:center;">
+      <div style="font-size:28px;color:var(--muted);">📚</div>
+      <div style="font-size:11px;color:var(--muted);margin-top:4px;">Ajouter une photo de couverture</div>
+    </div>
+    <input type="file" id="livrePhotoInput" accept="image/jpeg,image/png,image/webp" style="display:none" onchange="livresHandlePhoto(this)">
+    <!-- Titre du livre -->
+    <div style="margin-bottom:10px;">
+      <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;margin-bottom:6px;">TITRE DU LIVRE</div>
+      <input type="text" id="livreEditTitle" placeholder="Nom du livre..." maxlength="80" style="width:100%;padding:11px 13px;font-size:14px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
+    </div>
+    <!-- Légende personnalisable -->
+    <div style="margin-bottom:10px;">
+      <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;margin-bottom:6px;">LÉGENDE (affiché sous la pochette)</div>
+      <input type="text" id="livreEditDesc" placeholder="Une description courte..." maxlength="100" style="width:100%;padding:11px 13px;font-size:14px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
+    </div>
+    <div style="display:flex;gap:10px;margin-top:8px;flex-shrink:0;">
+      <button id="livreEditDelBtn" onclick="livresDelete()" style="display:none;padding:12px 16px;background:rgba(220,50,50,0.12);border:1px solid rgba(220,50,50,0.25);border-radius:12px;color:#e05555;font-size:14px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">Supprimer</button>
+      <button id="livreEditSaveBtn" onclick="livresSave()" style="flex:1;padding:12px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:12px;color:#fff;font-weight:700;font-size:15px;font-family:'DM Sans',sans-serif;cursor:pointer;">Sauvegarder</button>
+    </div>
   </div>
 </div>
 
