--- a/index.html
+++ b/index.html
@@ -862,10 +862,10 @@
     </button>
   </div>
   <!-- Zone idée du jour Groq -->
-  <div id="livreIdeaCard" style="display:none;background:var(--s2);border:1px solid var(--border);border-radius:14px;padding:14px 16px;margin-top:4px;margin-bottom:2px;">
-    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px;">
+  <div id="livreIdeaCard" style="display:none;background:var(--s2);border:1px solid var(--border);border-radius:14px;padding:14px 16px 14px 16px;margin-top:4px;margin-bottom:2px;position:relative;">
+    <button onclick="document.getElementById('livreIdeaCard').style.display='none'" style="position:absolute;top:10px;right:10px;background:none;border:none;cursor:pointer;color:var(--muted);font-size:18px;padding:4px 6px;line-height:1;z-index:2;">✕</button>
+    <div style="margin-bottom:8px;padding-right:28px;">
       <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;text-transform:uppercase;">Idée du jour 📚</div>
-      <button onclick="document.getElementById('livreIdeaCard').style.display='none'" style="background:none;border:none;cursor:pointer;color:var(--muted);font-size:18px;padding:0 2px;line-height:1;">✕</button>
     </div>
     <div id="livreIdeaText" style="font-size:14px;color:var(--text);line-height:1.5;">Chargement...</div>
     <div id="livreIdeaMeta" style="font-size:10px;color:var(--muted);margin-top:6px;"></div>
@@ -877,7 +877,7 @@
 </div>
 
 <!-- MODAL GESTION LIVRES -->
-<div id="livresGestionOverlay" class="nous-modal-overlay" onclick="if(event.target===this)livresCloseGestion()">
+<div id="livresGestionOverlay" class="nous-modal-overlay" data-close-fn="livresCloseGestion">
   <div class="nous-modal-sheet" style="max-height:88vh;overflow-y:auto;display:flex;flex-direction:column;" data-scrollable>
     <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
       <div style="font-size:17px;font-weight:700;color:var(--text);">Notre bibliothèque</div>
@@ -889,7 +889,7 @@
 </div>
 
 <!-- MODAL CRÉATION/ÉDITION LIVRE -->
-<div id="livreEditModal" class="nous-modal-overlay" onclick="if(event.target===this)livresCloseEdit()">
+<div id="livreEditModal" class="nous-modal-overlay" data-close-fn="livresCloseEdit">
   <div class="nous-modal-sheet" style="max-height:90vh;overflow-y:auto;display:flex;flex-direction:column;" data-scrollable>
     <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
       <div id="livreEditModalTitle" style="font-size:17px;font-weight:700;color:var(--text);">Nouvelle pochette</div>
