--- a/index.html
+++ b/index.html
@@ -3170,26 +3170,28 @@ document.addEventListener('DOMContentLoaded', function(){
   justify-content: center;
   background: rgba(0,0,0,0.6);
   backdrop-filter: blur(4px);
-  /* Bloque les gestes de scroll qui traversent l'overlay sur iOS */
-  touch-action: none;
+  /* NE PAS mettre touch-action:none ici — ça bloque les inputs/textareas dans la sheet sur iOS */
+  /* Le scroll du fond est bloqué par overflow:hidden sur body via _blockBackgroundScroll() */
 }
 .nous-modal-sheet {
   background: var(--s1);
   border-radius: 20px 20px 0 0;
   width: 100%;
   max-width: 480px;
-  /* Remonte la sheet au-dessus de la bottom-nav (64px + safe-bottom) */
+  /* Remonte la sheet au-dessus de la bottom-nav */
   margin-bottom: var(--nav-height);
-  /* Max height : viewport - nav - topbar - petite marge respirable */
+  /* Max height : viewport - nav - topbar - marge */
   max-height: calc(100dvh - var(--nav-height) - var(--safe-top) - 44px - 12px);
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: contain;
-  /* La sheet elle-même doit gérer les gestes touch */
+  /* pan-y permet le scroll vertical ET les interactions touch (tap, focus input) */
   touch-action: pan-y;
   padding: 20px;
-  padding-bottom: 24px;
+  padding-bottom: 32px;
   box-sizing: border-box;
+  /* Assure que la sheet absorbe les events — rien ne passe au fond */
+  isolation: isolate;
 }
 /* ── Mots doux IA ── */
 @keyframes spin { to { transform: rotate(360deg); } }
