--- a/index.html
+++ b/index.html
@@ -918,6 +918,35 @@
   </div>
 </div>
 
+<!-- MODAL ÉDITION POCHETTE ELLE/LUI -->
+<div id="pochetteEditModal" class="nous-modal-overlay" data-close-fn="pochetteEditClose">
+  <div class="nous-modal-sheet" style="max-height:90vh;overflow-y:auto;display:flex;flex-direction:column;" data-scrollable>
+    <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;flex-shrink:0;">
+      <div id="pochetteEditModalTitle" style="font-size:17px;font-weight:700;color:var(--text);">Modifier la pochette</div>
+      <button onclick="pochetteEditClose()" style="background:none;border:none;cursor:pointer;font-size:20px;color:var(--muted);padding:4px;">✕</button>
+    </div>
+    <!-- Photo -->
+    <div id="pochetteEditPhoto" onclick="pochetteEditPhotoClick()" style="width:100%;height:180px;background:var(--s2);border:2px dashed var(--border);border-radius:14px;display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;margin-bottom:14px;overflow:hidden;flex-shrink:0;background-size:cover;background-position:center;">
+      <div style="font-size:28px;color:var(--muted);">🖼️</div>
+      <div style="font-size:11px;color:var(--muted);margin-top:4px;">Ajouter une photo</div>
+    </div>
+    <input type="file" id="pochettePhotoInput" accept="image/jpeg,image/png,image/webp,image/gif" style="display:none" onchange="pochetteEditHandlePhoto(this)">
+    <!-- Titre (banner) -->
+    <div style="margin-bottom:10px;">
+      <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;margin-bottom:6px;">TITRE DE LA POCHETTE</div>
+      <input type="text" id="pochetteEditBanner" placeholder="Ex : Animal, Douceur, Cinéma…" maxlength="40" style="width:100%;padding:11px 13px;font-size:14px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
+    </div>
+    <!-- Légende -->
+    <div style="margin-bottom:10px;">
+      <div style="font-size:11px;font-weight:700;color:var(--muted);letter-spacing:0.5px;margin-bottom:6px;">LÉGENDE (affiché sous la pochette)</div>
+      <input type="text" id="pochetteEditDesc" placeholder="Une description courte…" maxlength="60" style="width:100%;padding:11px 13px;font-size:14px;font-family:'DM Sans',sans-serif;background:var(--s2);border:1px solid var(--border);border-radius:10px;color:var(--text);outline:none;box-sizing:border-box;">
+    </div>
+    <div style="display:flex;gap:10px;margin-top:8px;flex-shrink:0;">
+      <button id="pochetteEditSaveBtn" onclick="pochetteEditSave()" style="flex:1;padding:12px;background:linear-gradient(135deg,#e879a0,#9b59b6);border:none;border-radius:12px;color:#fff;font-weight:700;font-size:15px;font-family:'DM Sans',sans-serif;cursor:pointer;">Sauvegarder</button>
+    </div>
+  </div>
+</div>
+
 <!-- ROUE -->
 <div id="wheelSection" class="fade-in">
   <div class="section-label" style="padding:26px 16px 0">On fait quoi ce soir ? 🎲</div>
