--- a/index.html
+++ b/index.html
@@ -727,6 +727,24 @@
   </div>
 </div>
 
+
+<!-- BANDEAU IA — Suggestions hebdomadaires ELLE/LUI -->
+<div id="pochetteIaSection" class="fade-in" style="margin:8px 0 4px;">
+  <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:10px;">
+    <div style="display:flex;align-items:center;gap:8px;">
+      <span style="font-size:16px;">✨</span>
+      <span style="font-size:13px;font-weight:700;color:var(--text);letter-spacing:0.3px;">Suggestions de la semaine</span>
+    </div>
+    <button onclick="pochetteIaSuggest()" id="pochetteIaRefreshBtn" title="Nouvelles suggestions" style="background:none;border:none;cursor:pointer;color:var(--muted);padding:4px;display:flex;align-items:center;">
+      <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 2v6h-6"/><path d="M3 12a9 9 0 0 1 15-6.7L21 8"/><path d="M3 22v-6h6"/><path d="M21 12a9 9 0 0 1-15 6.7L3 16"/></svg>
+    </button>
+  </div>
+  <div id="pochetteIaCards" style="display:flex;gap:8px;flex-wrap:wrap;">
+    <div style="font-size:12px;color:var(--muted);padding:8px 0;">Appuie sur ✨ pour générer des idées…</div>
+  </div>
+  <div id="pochetteIaMeta" style="font-size:10px;color:var(--muted);margin-top:6px;"></div>
+</div>
+
 <!-- MÉMO COUPLE — Note + Todo côte à côte, sans PIN -->
 <div id="memoCoupleSection" class="fade-in">
   <div class="memo-header-row">
@@ -852,9 +870,8 @@
   <div class="slider" id="livresSlider" style="gap:12px;"></div>
   <!-- Boutons bas côte à côte -->
   <div style="display:flex;gap:10px;padding:12px 0 4px;">
-    <button id="livreIdeaBtn" onclick="livresIdeeDuJour()" style="flex:1;display:flex;align-items:center;justify-content:center;gap:7px;padding:11px 10px;background:var(--s2);border:1px solid var(--border);border-radius:13px;color:var(--text);font-size:13px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">
-      <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
-      Idée du jour
+    <button id="livreIdeaBtn" onclick="livresIdeeDuJour()" title="Idée du jour" style="flex:0 0 auto;width:46px;display:flex;align-items:center;justify-content:center;padding:11px;background:var(--s2);border:1px solid var(--border);border-radius:13px;color:#f5c842;cursor:pointer;">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="#f5c842" stroke="#f5c842" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21h6"/><path d="M12 3a6 6 0 0 1 6 6c0 2.2-1.2 4.1-3 5.2V17a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-2.8C7.2 13.1 6 11.2 6 9a6 6 0 0 1 6-6z"/></svg>
     </button>
     <button onclick="livresOpenNew()" style="flex:1;display:flex;align-items:center;justify-content:center;gap:7px;padding:11px 10px;background:linear-gradient(135deg,rgba(232,121,160,0.15),rgba(155,89,182,0.15));border:1px solid rgba(232,121,160,0.3);border-radius:13px;color:var(--text);font-size:13px;font-weight:600;font-family:'DM Sans',sans-serif;cursor:pointer;">
       <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
